# Projet_C-WildWater_MI2-B

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Terminal.txt  arborescence_prototype.txt  fichiers.h  guide_de_travail_projet.md  main.c  resume_synthetique_projet.txt
.github/workflows/: qodana_code_quality.yml
data/: c-wildwater.csv  vol_all.csv  vol_max.csv  vol_real.csv  vol_src.csv
data/.cache/: err_906e0f21ccef17b62b473cbc085774a0.tmp
doc/: ReadMe.md  architecture.md  guide_de_travail_projet.md
scripts/: exec.bash  myScript.bash  myScript.sh  myScript_fixed.sh  v0.bash  vags.bash
src/: Makefile  avl.c  avl.h  c-wildwater  converter  converter.c  csv_io.c  csv_io.h  histogram.c  histogram.h  histogram_modes.h  leaks.c  leaks.h  main.c  make_csv.c  make_csv.h  make_csv_v0.c  multiThreaded.c  multiThreaded.h  structs.h  utils.c  utils.h
test_v0-02122025/: create_csv  create_csv.c
tests/: run_tests.sh
