cmake_minimum_required(VERSION 4.0)
project(Projet_C_WildWater_MI2_B)

set(CMAKE_CXX_STANDARD 14)

add_executable(Projet_C_WildWater_MI2_B
        .idea/.gitignore
        .idea/editor.xml
        .idea/modules.xml
        .idea/Projet_C-WildWater_MI2-B.iml
        .idea/vcs.xml
        .idea/workspace.xml
        data/c-wildwater_v0.dat
        data/c-wildwater_v3.dat
        doc/architecture.md
        doc/Projet_C-WildWater_preIng2_2025_2026_v1.0.pdf
        doc/ReadMe.md
        src/Makefile
        .gitattributes
        arborescence_prototype.txt
        README.md
        resume_synthetique_projet.txt)
